[package]
name = "wlgrid"
version = "0.1.0"
edition = "2024"
default-run = "wlgrid"

[dependencies]
libloading = "0.8"
smithay-client-toolkit = "0.19"
wayland-client = "0.31"
# eframe = { version = "0.31", default-features = true, features = ["wayland", "x11", "wgpu"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
walkdir = "2"
fontdue = "0.9"
bincode = "1"

[[bin]]
name = "wlgrid-layer"
path = "src/unit_render.rs"
