[package]
name = "wlgrid"
version = "0.1.0"
edition = "2024"

[dependencies]
libloading = "0.8"
smithay-client-toolkit = "0.19"
wayland-client = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
resvg = "0.45"
walkdir = "2"
fontdue = "0.9"
bincode = "1"
