[package]
name = "wlgrid"
version = "0.1.0"
edition = "2024"

[dependencies]
libloading = "0.8"
smithay-client-toolkit = "0.19"
wayland-client = "0.31"
wayland-cursor = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
resvg = "0.45"
walkdir = "2"
ab_glyph = "0.2"
bincode = "1"
libc = "0.2"
glow = "0.17.0"
khronos-egl = { version = "6.0.0", features = ["dynamic"] }
wayland-egl = "0.32.11"
bytemuck = "1.25.0"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "startup"
harness = false
path = "test/startup.rs"

[[bench]]
name = "test_render"
harness = false
path = "test/test_render.rs"
